# fusion-ocr

./: .env.example  .gitignore  README.md  config.example.toml  constraints.txt  pyproject.toml  samples
.github/: CODEOWNERS
Docs/: configuration.md  deployment.md  eval-labelling.md  outputs.md  principles.md  routing.md
Docs/dev_notes/: done.md  evidence_plan.md  handover_reading_order.md  motivation_and_strategy.md  rapidocr_eval_plan.md  reading_order_measurement.md  review_01_260627.md  review_02_2602627.md  review_03_260705.md  roadmap.md  tier3_plan.md
deploy/: fusion-ocr-worker.service  fusion-ocr.service  nginx.fusion-ocr.conf
eval_labels/: labelset.example.json
eval_out/: blank_probes.py  divergence_triage.py  dpi_recheck.py  insertion_gate.py  noise_floor.py  ocrq_full.py  ocrq_triage.py  stream_a.py  stream_a_vlm.py  stream_b_iam.py  stream_f_model_ab.py
eval_out/blank_probes/: results.csv  summary.json
eval_out/divergence_triage/: f1_all.csv  triage_table.csv  verdicts.md
eval_out/dpi_recheck/: results.csv
eval_out/insertion_gate/: results.csv  summary.json
eval_out/manifests/: blank_probes_2026-07-09.md  divergence_triage_2026-07-09.md  dpi_recheck_2026-07-08.md  insertion_gate_2026-07-09.md  noise_floor_2026-07-08.md  ocrq_full_2026-07-06.md  placement_deterministic_2026-07-07.md  stream_a_deterministic_2026-07-07.md  stream_a_vlm_2026-07-07.md  stream_b_iam_2026-07-09.md  stream_f_model_ab_2026-07-09.md
eval_out/noise_floor/: results.csv
eval_out/ocrq_full/: results.csv
eval_out/stream_a/: results.csv
eval_out/stream_a_vlm/: results.csv
eval_out/stream_b_iam/: results.csv
eval_out/stream_f_model_ab/: results.csv
src/fusion_ocr/: __init__.py  api.py  compose.py  config.py  ingest.py  jobs.py  models.py  pipeline.py  raster.py  routing.py  settings.py  storage.py  watcher.py
src/fusion_ocr/engines/: __init__.py  apple_vision.py  rapid.py
src/fusion_ocr/eval/: __init__.py  __main__.py  datasets.py  harness.py  labels.py  metrics.py  placement.py
src/fusion_ocr/overlay/: __init__.py  pymupdf_overlay.py
src/fusion_ocr/stages/: __init__.py  fusion.py  language.py  layout.py  ocr_det.py  render.py  table.py  table_fill.py  table_read.py  triage.py  vlm_read.py
src/fusion_ocr/vlm/: __init__.py  client.py  openai_compat.py  prompts.py
tests/: test_airgap.py  test_api.py  test_apple_vision.py  test_compose.py  test_eval_datasets.py  test_eval_labels.py  test_eval_metrics.py  test_eval_placement.py  test_fusion.py  test_ingest.py  test_jobs.py  test_language.py  test_layout.py  test_models.py  test_ocr_det.py  test_openai_compat.py  test_overlay.py  test_pipeline.py  test_raster.py  test_reading_order.py  test_render.py  test_resume.py  test_rotated_order.py  test_routing.py  test_settings.py  test_storage.py  test_table.py  test_table_fill.py  test_table_read.py  test_triage.py  test_vlm_read.py  test_watcher.py
