[project]
name = "fusion-ocr"
version = "0.0.1"
description = "Hybrid deterministic + VLM OCR pipeline producing searchable bbox overlays, per-language markdown, and a provenance-carrying segment index."
requires-python = ">=3.11"
# Walking skeleton has NO hard deps. Real stages add theirs behind extras so the
# bare plumbing runs (and tests) on any machine.
dependencies = []

# Pinned with a major-version ceiling so a silent upgrade can't change OCR output for a
# given PDF — reproducibility is load-bearing for defensibility. PaddleOCR especially had
# breaking 2.x->3.x churn (ocr_det.py works around 3.x). Floors are the tested versions
# below; for an EXACT rebuild use constraints.txt (pip install ... -c constraints.txt).
# Tested set: fastapi 0.138.1, uvicorn 0.49.0, pymupdf 1.27.2.3, numpy 2.3.5,
# paddleocr 3.7.0, paddlepaddle 3.3.1, httpx 0.28.1, pillow 12.2.0, ocrmac 1.0.1.
[project.optional-dependencies]
api = ["fastapi>=0.138,<1", "uvicorn>=0.49,<1", "python-multipart>=0.0.18,<1", "tomli-w>=1,<2", "python-dotenv>=1,<2"]  # multipart for UploadFile; tomli-w for POST /config/save; dotenv loads .env (FUSION_OCR_API_TOKEN)
ocr = ["pymupdf>=1.27,<2", "numpy>=2.3,<3", "paddleocr>=3.7,<4", "paddlepaddle>=3.3,<4"]
vlm = ["httpx>=0.28,<1", "pillow>=12,<13"]         # OpenAI-compatible client + image handling
vision = ["ocrmac>=1,<2"]                          # Apple Vision OCR (macOS only, on-device)
# RapidOCR (ONNX Runtime) — alternative deterministic engine for the perf A/B vs PaddleOCR.
# `rapidocr` is the CURRENT unified package (3.x, onnxruntime/openvino/paddle backends); the old
# `rapidocr-onnxruntime` (1.4.4, Jan 2025) is legacy/frozen — don't use it. det/rec first; the
# layout/table ports are added when that part of the eval is reached, after verifying they expose
# the reading-order head (Docs/dev_notes/rapidocr_eval_plan.md). NOT installed by default:
# `pip install -e .[rapid]` (add -U to force the newest 3.x, then check `rapidocr.__version__`).
rapid = ["rapidocr>=3.9,<4", "onnxruntime>=1.17"]
dev = ["pytest>=8,<10"]

[project.scripts]
fusion-ocr = "fusion_ocr.watcher:main"
fusion-ocr-serve = "fusion_ocr.api:main"   # run the HTTP job API (extra: api)

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
